--- a/my-app/src/components/ExpenseItem.css
+++ b/my-app/src/components/ExpenseItem.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
     padding: 0.5rem;
     margin: 1rem 0;
-    border-radius: 12px;
+    border-radius: 5px;
     background-color: #4b4b4b;
 }
 
@@ -29,11 +29,11 @@
 .expense-item__price {
     font-size: 1rem;
     font-weight: bold;
-    color: white;
-    background-color: #40005d;
-    border: 1px solid white;
+    color: #222222;
+    background-color: #fff900;
+    border: 1px solid #222222;
     padding: 0.5rem;
-    border-radius: 12px;
+    border-radius: 5px;
 }
 
 @media (min-width: 580px) {
