--- a/goal-list/src/components/UI/Button/Button.css
+++ b/goal-list/src/components/UI/Button/Button.css
@@ -1,11 +1,13 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #8b005d;
+  border: 1px solid #1f1f1f;
+  border-radius: 5px;
   color: white;
-  background: #8b005d;
+  background: #222222;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
   cursor: pointer;
+  transition: background .3s ease-in-out;
 }
 
 .button:focus {
@@ -14,7 +16,7 @@
 
 .button:hover,
 .button:active {
-  background: #ac0e77;
-  border-color: #ac0e77;
+  background: #353535;
+  border-color: #222222;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.26);
 }
