--- a/goal-list/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/goal-list/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -25,3 +25,12 @@
   background: rgba(255, 255, 36, 0.4);
   color: #111111;
 }
+
+.form-control.invalid input {
+  border-color: rgba(255,0,0,0.57);
+  background: rgba(255,146,146,0.81);
+}
+
+.form-control.invalid label {
+  color: rgba(255,0,0,0.57);
+}
