--- a/simple-user-validation/src/index.css
+++ b/simple-user-validation/src/index.css
@@ -4,8 +4,12 @@
 
 html {
   font-family: sans-serif;
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+  min-height: 100vh;
 }
 
 body {
   margin: 0;
 }
+
