--- a/simple-user-validation/src/components/Users/UsersList.module.css
+++ b/simple-user-validation/src/components/Users/UsersList.module.css
@@ -10,7 +10,15 @@
 }
 
 .users li {
-    border: 1px solid #ccc;
+    display: flex;
+    background: linear-gradient(
+            to left top,
+            rgba(255, 255, 255, 0.8),
+            rgba(255, 255, 255, 0.5)
+    );
+    border-radius: 1rem;
     margin: 0.5rem 0;
-    padding: 0.5rem;
+    padding: 2rem;
+    box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
+    justify-content: space-between;
 }
