--- a/dummy-auth/src/components/MainHeader/MainHeader.module.css
+++ b/dummy-auth/src/components/MainHeader/MainHeader.module.css
@@ -7,7 +7,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #741188;
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
   padding: 0 2rem;
 }
 
