--- a/dummy-auth/src/components/UI/Button/Button.module.css
+++ b/dummy-auth/src/components/UI/Button/Button.module.css
@@ -1,12 +1,26 @@
 .button {
-  font: inherit;
-  border: 1px solid #4f005f;
-  background: #4f005f;
-  color: white;
-  padding: 0.75rem 3.5rem;
+  background-color: initial;
+  background-image: linear-gradient(#8614f8 0, #760be0 100%);
+  border-radius: 5px;
+  border-style: none;
+  box-shadow: rgba(245, 244, 247, .25) 0 1px 1px inset;
+  color: #fff;
   cursor: pointer;
-  font-size: 1.15rem;
-  border-radius: 30px;
+  display: inline-block;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 60px;
+  line-height: 60px;
+  margin-left: -4px;
+  outline: 0;
+  text-align: center;
+  transition: all .3s cubic-bezier(.05, .03, .35, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: bottom;
+  width: 190px;
 }
 
 .button:hover,
